--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         hello
     </head>
         <body>
-            <h1>My name is aj.tifee</h1>
-            <h1>This my github lab</h1>
+            <h1>Home</h1>
+            <h1>Product</h1>
+            <h1>MAp</h1>
         </body>
 </html> 
